--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,13 +8,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [ 7.3, 7.4, 8.0, 8.1 ]
-        laravel: [ 8.*, 9.* ]
-        exclude:
-          - php: 7.3
-            laravel: 9.*
-          - php: 7.4
-            laravel: 9.*
+        php: [ 8.0, 8.1, 8.2, 8.3, 8.4 ]
+        laravel: [ 8.*, 9.*, 10.*, 11.* ]
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
