--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "ext-json": "*",
         "aws/aws-sdk-php": "^3.155",
         "illuminate/support": "^8.52|^9.0|^10.0|^11.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0|^7.0"
+        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
