--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -6,7 +6,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         php: [ 8.0, 8.1, 8.2, 8.3, 8.4 ]
         laravel: [ 8.*, 9.*, 10.*, 11.* ]
