--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         "php": "^8.0",
         "ext-json": "*",
         "aws/aws-sdk-php": "^3.155",
-        "illuminate/support": "^8.52|^9.0|^10.0|^11.0",
-        "laravel/framework": "11.*"
+        "illuminate/support": "^8.52|^9.0|^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0"
